--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>League of legends champions</h1>
+    <h1>League of legends championss</h1>
     <p>This page is to show the differents champions that has league 
         of legends.</p>
     <a href="https://www.leagueoflegends.com/">Visit the game website here</a>
