--- a/index.html
+++ b/index.html
@@ -3,41 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Testing page html</title>
+    <title>League of legends information</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/test.css">
 </head>
 <body>
-    <h1>League of legends champions</h1>
-        <p>This page is to show the differents champions that has league 
-            of legends.</p>
-        <a href="./images/Terror.gif">Visit the game official website here</a>
-        
-        <div id="championsBorder">
-            <h2>Champions that I like it!</h2>
-            <div class="responsive">
-                <div class="gallery">
-                  <a target="_blank" href="./images/fizz.png">
-                    <img src="./images/fizz.png" alt="Fizz.png" width="600" height="400">
-                  </a>
-                  <div class="desc">Fizz</div>
-                </div>
-            </div>
-            <div class="responsive">
-                <div class="gallery">
-                  <a target="_blank" href="./images/diana.png">
-                    <img src="./images/diana.png" alt="Diana.png" width="600" height="400">
-                  </a>
-                  <div class="desc">Diana</div>
-                </div>
-            </div>
-            <div class="responsive">
-                <div class="gallery">
-                  <a target="_blank" href="./images/annie.png">
-                    <img src="./images/annie.png" alt="Annie.png" width="600" height="400">
-                  </a>
-                  <div class="desc">Annie</div>
-                </div>
-            </div>
-        </div>
+  <nav class="navbar custom-navbar">
+    <form class="container-fluid justify-content-start">
+      <a href="index.html">
+        <button class="btn btn-outline-success me-2 customButton" type="button" disabled>Inicio</button>
+      </a>
+      <a href="./html/championsLol.html">
+        <button class="btn btn-outline-info customButton" type="button">Campeones</button>
+      </a>
+      <a href="https://www.leagueoflegends.com/">
+        <button type="button" class="btn btn-link">Página oficial de league of legends</button>
+      </a>
+    </form>
+  </nav>
+  <Div class="tittleWebPage">
+    <p>League of legends</p>
+  </Div>
+  <div class="gameDesc">
+    <p>League of legends es un MOBA (Multiplayer online battle arena), 
+      en este juego te enfrentarás a un equipo de 5 jugadores, es decir, 
+      que en total serán 10 jugadores (5 de tu equipo Vs. 5 jugadores en el 
+      equipo contrario).</p>
+  </div>
+  <div class="gameDesc"> 
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/vzHrjOMfHPY?si=0kDzp2Dvo0-w2Fl_" 
+    title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; 
+    gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen>
+  </iframe>
+  </div> 
 </body>
 </html>
